syntax = "proto3";

option go_package = "github.com/samarthasthan/e-commerce/proto_go";

// SignUp related messages
message SignUpRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_no = 4;
  string password = 5;
  string role_name = 6;
}

message SignUpResponse {
  bool success = 1;
  string message = 2;
}

message VerifyEmailOTPRequest {
  string email = 1;
  int32 otp = 3;
}

message VerifyEmailOTPResponse {
  bool success = 1;
  string message = 2;
}

// SignIn related messages
message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string session_id = 1;
  string message = 2;
}

// Forgot Password related messages
message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
}

message VerifyForgotPasswordOTPRequest {
  string email = 1;
  string otp = 2;
}

message VerifyForgotPasswordOTPResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// SignOut related messages
message SignOutRequest {
  string session_id = 1;
}

message SignOutResponse {
  bool success = 1;
  string message = 2;
}

// Authentication service definition
service AuthenticationService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc VerifyEmailOTP(VerifyEmailOTPRequest) returns (VerifyEmailOTPResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);

  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc VerifyForgotPasswordOTP(VerifyForgotPasswordOTPRequest) returns (VerifyForgotPasswordOTPResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}
